--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.1",
     "axios": "^1.13.2",
+    "embla-carousel-react": "^8.6.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.559.0",
     "next": "^16.0.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
