--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.1",
+    "antd": "^6.2.0",
     "axios": "^1.13.2",
     "embla-carousel-react": "^8.6.0",
     "js-cookie": "^3.0.5",
