--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "19.2.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
