Update workflow name for Prelogin vite deployment

--- a/.github/workflows/deploy-main-to-production-nextjs.yml
+++ b/.github/workflows/deploy-main-to-production-nextjs.yml
@@ -1,4 +1,4 @@
-name: Deploy main → production (Postlogin vite)
+name: Deploy main → production (Prelogin vite)
 
 on:
   workflow_dispatch: #mannual trigger
