--- a/.github/workflows/deploy-main-to-production-nextjs.yml
+++ b/.github/workflows/deploy-main-to-production-nextjs.yml
@@ -1,7 +1,7 @@
-name: Deploy main → production (Prelogin vite)
+name: Deploy main → production (Prelogin Nextjs)
 
 on:
-  workflow_dispatch: #mannual trigger
+  workflow_dispatch: # Allows manual trigger
 
 permissions:
   contents: write
@@ -12,16 +12,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Validate actor (restrict who can run)
+        if: github.actor != 'pushpesh-zuzu'
+        run: |
+          echo "❌ Unauthorized user: ${{ github.actor }}"
+          exit 1
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           ref: main
-          # Add this to ensure the full history is available for the push
-          fetch-depth: 0 
+          token: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
 
       - name: Push main to production
         run: |
           git config user.name "Pushpesh Sharma"
           git config user.email "pushpeshsh@zuzucodes.com"
-          # No need to fetch/checkout again, actions/checkout already did it
+          git fetch origin
+          git checkout main
           git push origin main:production --force
