--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^16.0.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
